--- a/src/page-1.html
+++ b/src/page-1.html
@@ -85,7 +85,7 @@
                   data-drupal-link-system-path="node/1214">Investors</a>
               </li>
               <li>
-                <a href="/user/login" data-drupal-link-system-path="user/login">Login</a>
+                <a href="/user/login" data-drupal-link-system-path="user/login">yes</a>
               </li>
               <li class="last">
                 <a href="/user/register" data-drupal-link-system-path="user/register">Register</a>
