--- a/src/page-1.html
+++ b/src/page-1.html
@@ -85,7 +85,7 @@
                   data-drupal-link-system-path="node/1214">Investors</a>
               </li>
               <li>
-                <a href="/user/login" data-drupal-link-system-path="user/login">yes</a>
+                <a href="/user/login" data-drupal-link-system-path="user/login">Login</a>
               </li>
               <li class="last">
                 <a href="/user/register" data-drupal-link-system-path="user/register">Register</a>
@@ -119,7 +119,7 @@
               class="programs full clearfix">
 
               <div class="content">
-                <div class="layout layout--twocol-section layout--twocol-section--75-25">
+                <div class="layout ">
 
                   <div class="layout__region layout__region--first">
                     <section class="block block-views block-views-blockprograms-block-13 clearfix">
